algumas mudanças para melhorar o codigo